src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__uint64__cast_uint64_to_float64__sqlfunc_macro.snap
---
source: src/expr/src/scalar/func/impls/uint64.rs
expression: info
---
Info {
    output_type_nullable: ColumnType {
        scalar_type: Float64,
        nullable: true,
    },
    output_type_nonnullable: ColumnType {
        scalar_type: Float64,
        nullable: false,
    },
    preserves_uniqueness: false,
    inverse: Some(
        CastFloat64ToUint64(
            CastFloat64ToUint64,
        ),
    ),
    is_monotone: true,
    propagates_nulls: true,
    introduces_nulls: false,
    could_error: false,
}
